--- a/less/level-modals.less
+++ b/less/level-modals.less
@@ -4,9 +4,247 @@
 	left: 50%;
 	top: -1000px;
 	width: 840px;
-	background-color: rgba(0, 0, 0, 0.2);
+	background-color: rgba(35, 35, 35, 0.6);
 	transform: translate(-50%, -50%);
 	transition: 0.6s;
+
+	@media @tablet {
+		width: 700px;
+	}
+
+	@media @mobile {
+		width: ~"calc(100% - 20px)";
+	}
+
+	&__wrapper {
+		padding: 40px 25px;
+		padding-top: 80px;		
+
+		@media @mobile {
+			padding: 10px;
+		}
+	}
+
+	&__header-wrapper {
+		position: absolute;
+		left: 20px;
+		top: -90px;
+
+		@media @mobile {
+			position: relative;
+			top: 0;
+			left: 0;
+			display: flex;
+			align-items: center;
+		}
+	}
+
+	&__number {
+		font-size: 150px;
+		color: #6ab980;
+		font-family: SFUIHeavy;
+
+		@media @mobile {
+			display: inline-block;
+			margin-right: 10px;
+			font-size: 100px;
+		}
+	}
+
+	&__greeting-wrapper {
+		position: absolute;
+		top: 60px;
+		left: 65px;
+
+		@media @mobile {
+			position: relative;
+			top: 0;
+			left: 0;
+			display: inline-block;
+		}
+	}
+
+	&__greeting {
+		display: block;
+		font-size: 26px;
+		font-family: SFUILight;
+		white-space: pre;
+
+		@media @mobile {
+			font-size: 20px;
+		white-space: normal;
+		}
+	}
+
+	&__level {
+		display: block;
+		font-size: 30px;
+		font-family: SFUIHeavy;
+		text-transform: uppercase;
+
+		@media @mobile {
+			font-size: 20px;
+		}
+	}
+
+	&__up-text {
+		display: block;
+		margin-bottom: 25px;
+		font-size: 18px;
+		font-family: SFUIMedium;
+	}
+
+	&__ability-wrapper {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__close {
+		position: absolute;
+		right: -50px;
+		top: -50px;
+		width: 35px;
+		height: 35px;
+		cursor: pointer;
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: 15px;
+			left: -4px;
+			width: 40px;
+			height: 2px;
+			background-color: #b7b7b7;
+			transform: rotate(45deg);
+			transition: 0.1s;
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 15px;
+			left: -4px;
+			width: 40px;
+			height: 2px;
+			background-color: #b7b7b7;
+			transform: rotate(-45deg);
+			transition: 0.1s;
+		}
+
+		&:hover {
+
+			&::before {
+				background-color: #fff;
+			}
+
+			&::after {
+				background-color: #fff;
+			}
+		}
+
+		@media @tablet {
+			right: 10px;
+			top: 15px;
+		}
+	}
+}
+
+.level-modal--fourth {
+	top: 50%;
+	background-color: rgba(0, 0, 0, 0.75);
+
+	.level-modal__header-wrapper {
+		z-index: -1;
+		top: -100px;
+		left: -25px;
+
+		@media @mobile {
+			top: 0;
+			left: 0;
+		}
+	}
+
+	.level-modal__number {
+		width: 80px;
+
+		img {
+			width: 100%;
+		}
+	}
+
+	.level-modal__greeting-wrapper {
+		top: 70px;
+		left: 100px;
+
+		@media @mobile {
+			top: 0;
+			left: 0;
+		}
+	}
+
+	.level-ability__up-text {
+		position: relative;
+	}
+
+	.level-ability {
+		border-color: #ffff75;
+	}
+
+	.level-ability__header {
+		margin-bottom: 0;
+		line-height: 31px;
+	}
+}
+
+.level-ability {
+	width: 250px;
+	padding: 25px;
+	border: 1px dashed #6ab980;
+
+	@media @tablet {
+		width: 205px;
+	}
+
+	@media @mobile {
+		width: 100%;
+		margin-bottom: 10px;
+		padding: 10px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&__header {
+		margin-bottom: 10px;
+		font-size: 20px;
+		font-family: SFUIHeavy;
+		text-transform: uppercase;
+
+		@media @tablet {
+			font-size: 16px;
+		}
+
+		@media @mobile {
+			margin-bottom: 0;
+		}
+	}
+
+	&__text {
+		color: #afaeae;
+		font-size: 14px;
+		line-height: 23px;
+	}
+}
+
+.level-ability--fourth {
+	width: 385px;
+	margin-bottom: 20px;
+
+	@media @tablet {
+		width: 315px;
+	}
 }
 
 .level-modal-bg {
@@ -17,5 +255,5 @@
 	width: 100%;
 	height: 100%;
 	background-color: #2e2e2e;
-	opacity: 0;
+	opacity: 0.85;
 }
