--- a/less/condition.less
+++ b/less/condition.less
@@ -5,7 +5,8 @@
 		flex-wrap: wrap;
 		width: 1180px;
 		margin: 0 auto;
-		padding: 35px;
+		padding-top: 35px;
+		padding-bottom: 35px;
 
 		@media @tablet {
 			justify-content: space-around;
@@ -37,6 +38,17 @@
 	.conditions__wrapper {
 		display: block;
 		padding: 0;
+	}
+}
+
+.conditions--tournament {
+	
+	.conditions__wrapper {
+			padding-bottom: 80px;
+	}
+
+	.condition {
+		margin-bottom: 0;
 	}
 }
 
