--- a/less/condition.less
+++ b/less/condition.less
@@ -44,11 +44,19 @@
 .conditions--tournament {
 	
 	.conditions__wrapper {
-			padding-bottom: 80px;
+		padding-bottom: 80px;
+
+		@media @mobile {
+			padding-bottom: 40px;
+		}
 	}
 
 	.condition {
 		margin-bottom: 0;
+
+		@media @mobile {
+			margin-bottom: 40px;
+		}
 	}
 }
 
