--- a/less/registration.less
+++ b/less/registration.less
@@ -115,12 +115,18 @@
 
 	&__count {
 		display: block;
+		margin-bottom: 20px;
 		font-size: 80px;
 		font-family: SFUIHeavy;
 
 		@media @mobile {
 			font-size: 30px;
 		}
+	}
+
+	&__details {
+		display: inline-block;
+		border-bottom: 1px dashed #fff;
 	}
 }
 
