--- a/css/style.css
+++ b/css/style.css
@@ -3768,6 +3768,22 @@ form * {
 .places-table__cell--fifth:first-child {
   background-image: url('../img/places/star-fifth.png');
 }
+.modal-rules {
+  position: fixed;
+  z-index: 101;
+  top: -1000px;
+  left: 50%;
+  width: 960px;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.85);
+  transition: 0.6s;
+}
+.modal-rules__wrapper {
+  padding: 30px 20px;
+}
+.modal-rules__list {
+  list-style: none;
+}
 @media (min-width: 788px) {
   .main-wrapper {
     margin-top: 77px;
